--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,8 +24,7 @@ dependencies = [
     "mcp>=1.4.1",
     "psycopg-pool>=3.2.6",
     "psycopg>=3.2.6",
-    "pyyaml>=6.0.2",
-    "simplejson>=3.20.1",
+    "pyyaml>=6.0.2"
 ]
 
 [project.scripts]
