--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 description = "A server that exposes Materialize indexes as tools over the Model Context Protocol (MCP)"
 readme = "README.md"
 requires-python = ">=3.13"
-license = {text = "MIT"}
 authors = [
     {name = "Materialize Inc", email = "support@materialize.com"}
 ]
@@ -49,4 +48,5 @@ dev = [
     "pytest-asyncio>=0.26.0",
     "pytest>=8.3.5",
     "testcontainers>=4.10.0",
+    "hatch>=1.9.4"
 ]
