--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,10 @@ dependencies = [
     "psycopg-pool>=3.2.6",
     "psycopg>=3.2.6",
     "pyyaml>=6.0.2",
+    "sentence-transformers>=3.3.1",
+    "beautifulsoup4>=4.12.3",
+    "numpy>=1.26.0",
+    "boto3>=1.40.1",
 ]
 
 [project.scripts]
