--- a/developers/pyproject.toml
+++ b/developers/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "materialize-mcp-server"
+name = "mcp_materialize_developers"
 version = "0.1.0"
 description = "A server that exposes Materialize indexes as tools over the Model Context Protocol (MCP)"
 readme = "README.md"
@@ -20,15 +20,19 @@ keywords = ["materialize", "mcp", "database", "api"]
 dependencies = [
     "aiohttp>=3.11.18",
     "fastapi>=0.115.12",
-    "mcp>=1.4.1",
+    "mcp>=1.10.1",
     "psutil>=7.0.0",
     "psycopg-pool>=3.2.6",
     "psycopg>=3.2.6",
     "pyyaml>=6.0.2",
+    "sentence-transformers>=3.3.1",
+    "beautifulsoup4>=4.12.3",
+    "numpy>=1.26.0",
+    "boto3>=1.40.1",
 ]
 
 [project.scripts]
-materialize-mcp-server = "materialize_mcp_server:main"
+mcp_materialize_developers = "mcp_materialize_developers:main"
 
 [project.urls]
 Homepage = "https://github.com/MaterializeInc/materialize-mcp-server"
@@ -41,7 +45,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["materialize_mcp_server"]
+packages = ["mcp_materialize_developers"]
 
 [dependency-groups]
 dev = [
